# SmartFlush-PredictiveModel

./: .gitignore  CONTRIBUTING.md  DESCRIPTION.md  QUICKSTART.md  README.md  VALIDATION.md  config.yaml  config_sample.yaml  create_sample_data.py  main.py  pyproject.toml  requirements.txt
data/: README.md
notebooks/: ANN.ipynb  EDA.ipynb  example_analysis.ipynb
reports/figures/: chi_square_results.csv  correlation_matrix.csv
src/: __init__.py  data_loading.py  eda.py  metrics.py  models.py  utils.py
tests/: __init__.py  test_data_loading.py  test_eda.py  test_metrics.py  test_models.py  test_utils.py
